--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,15 @@
   .text-balance {
     text-wrap: balance;
   }
+  .scrollbar-none {
+    /* Firefox */
+    scrollbar-width: none;
+    /* IE/Edge */
+    -ms-overflow-style: none;
+  }
+  .scrollbar-none::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 @layer base {
